# bayesbuilding

./: LICENCE.md  README.md  dev_fmu.py  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: build.yaml
bayesbuilding/: __init__.py  custom.py  model_selection.py  models.py  plotting.py  wrapper.py
requirements/: install-min.txt
tests/: test_plotting.py  test_wrapper.py
