[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bayesbuilding"
version = "0.1.0"
description = "Bayesian approach for building energy modeling"
readme = "README.md"
license = { file = "LICENCE.md" }
authors = [
    { name = "Nobatek/INEF4", email = "bdurandestebe@nobatek.inef4.com" },
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "pymc>=5.20.0,<6",
    "arviz>=0.20.0,<1",
    "xarray>=2024.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.3",
    "matplotlib>=3.7.5",
    "plotly>=5.13.1",
    "seaborn>=0.13.2",
    "h5netcdf>=1.1.0",
    "h5py>=3.10.0",
]

[project.urls]
Homepage = "https://github.com/BuildingEnergySimulationTools/bayesbuilding"

[tool.setuptools.packages.find]
exclude = ["tests*"]
